# olvm

./: .gitignore  Cargo.toml  DOC.md  README.md  database.sql  olvm.conf  olvm.service
docs/: commands.md  kvm.md
scripts/kvm/image/: create.py  create.sh  delete.py
scripts/kvm/vm/: create.py  create.sh  delete.py  snapshot_create.py  snapshot_delete.py  snapshot_restore.py  start.py  status.py  stop.py
scripts/lxc/image/: create.py  delete.py
scripts/lxc/vm/: create.py  delete.py  start.py  status.py  stop.py
src/: backend.rs  error.rs  main.rs
src/backend/: image.rs  mod.rs  vm.rs
src/common/: mod.rs  structs.rs
src/config/: mod.rs
src/database/: image.rs  mod.rs  network.rs  snapshot.rs  vm.rs
src/handler/: image.rs  mod.rs  network.rs  snapshot.rs  vm.rs
src/interface/: http.rs  mod.rs  stdin.rs  tests.rs  udp.rs
src/net/: dhcp.rs  mod.rs  system.rs
src/parser/: mod.rs  stdin.rs  tests.rs
src/remote/: mod.rs
src/utils/: mod.rs  system.rs
