[package]
name = "olvm"
version = "0.1.0"
authors = ["Quadrifoglio <clement@dreamvids.fr>"]

[dependencies]
regex = "0.2"
serde = "0.9.10"
serde_derive = "0.9.1"
serde_json = "0.9.8"
toml = "0.3.1"
bson = "0.4.4"
mongodb = "0.2.3"

uuid = { version = "0.4", features = ["v4"] }

[dependencies.dhcp]
path = "../dhcp-rs"

[dependencies.mhttp]
path = "../mhttp"
